# MotorDriverCard

./: .cproject  .gitignore  .mxproject  .project  .project.bak  CMakeLists.txt  MotorDriverCard.ioc  README.md  STM32F072RBTX_FLASH.ld  bootstrapper.sh  env_configuration.py
.circleci/: config.yml
Inc/: main.h  stm32f0xx_it.h  tim.h  usart.h
Inc/ICI/: interthread_com_if_params.h
Inc/MDC/com/: com.h  communication_context.h  message_control.h  message_storage.h  subscriptions_container.h
Inc/MDC/com/impl/: communication_context.h  message_control.h  rx.h
Inc/MDC/com/interface/: messages_size_map.h
Inc/MDC/controller/: interface.h
Inc/MDC/controller/impl/: controller.h  defs.h  feedback.h  message_dispatch.h  motor_process.h  motors.h
Inc/MDC/feedback/: interface.h
Inc/MDC/feedback/impl/: encoder.h  feedback.h
Inc/MDC/log/: interface.h
Inc/MDC/log/impl/: def.h  log.h  sender.h
Inc/MDC/main/: context.h  defs.h  init.h  log.h
Inc/MDC/main/services/: interrupt_service.h
Inc/MDC/motors/: interface.h
Inc/MDC/motors/impl/: defs.h  feedback.h  message_dispatch.h  motor_process.h  motors.h  pid.h  platform.h
Inc/MDC/platform/: motor_control.h  pid.h  platform.h
Inc/MDC/rx/: interface.h
Inc/MDC/rx/impl/: msg_distributor.h  msg_processor.h  receiver.h  rx.h
Inc/log/: interface.h
Inc/log/impl/: log.h
Inc/msg/: consts.h  message_ids.h
Inc/msg/defs/: Message.h  PlatformSetMotorSpeed.h
Inc/msg/ser_des/serializers/: PlatformSetMotorSpeed.h
Src/: dma.c  freertos.c  gpio.c  i2c.c  main.c  stm32f0xx_hal_msp.c  stm32f0xx_hal_timebase_tim.c  stm32f0xx_it.c  tim.c  usart.c
Src/MDC/com/: com.c  interface.c  message_control.c  message_storage.c  subscription_container.c
Src/MDC/com/impl/: com.c
Src/MDC/com/interface/: messages_size_map.c
Src/MDC/controller/: interface.c
Src/MDC/controller/impl/: controller.c  feedback.c  message_dispatch.c  motor_process.c  motors.c  pid.c
Src/MDC/feedback/: interface.c
Src/MDC/feedback/impl/: encoder.c  feedback.c
Src/MDC/log/: interface.c
Src/MDC/log/impl/: log.c  sender.c
Src/MDC/main/: context.c  init.c  log.c
Src/MDC/main/services/: interrupt_service.c
Src/MDC/motors/: interface.c
Src/MDC/motors/impl/: feedback.c  message_dispatch.c  motor_process.c  motors.c  pid.c  platform.c
Src/MDC/platform/: motor_control.c  motor_info.c  pid.c  platform.c
Src/MDC/rx/: interface.c
Src/MDC/rx/impl/: message_control.c  msg_distributor.c  msg_processor.c  receiver.c  rx.c
Src/log/: interface.c
Src/log/impl/: log.c
Src/msg/ser_des/serializers/: PlatformSetMotorSpeed.c
config/: config.env
docs/: index.md
sct/config/: stm32f072.resc
sources/: CMakeLists.txt  sources.ioc
sources/App/: CMakeLists.txt
sources/App/inc/log/: interface.h
sources/App/inc/main/: context.h  defs.h  init.h  module.h
sources/App/inc/msg/: consts.h  message_ids.h  messages_size_map.h
sources/App/src/: CMakeLists.txt
sources/App/src/log/: interface.c
sources/App/src/log/impl/: log.c
sources/App/src/main/: context.c  init.c
sources/App/src/modules/: CMakeLists.txt
sources/App/src/modules/controller/: CMakeLists.txt  interface.c
sources/App/src/modules/controller/impl/: controller.c  message_dispatch.c  motor_process.c  pid.c
sources/App/src/modules/controller/impl/handlers/: platform_set_motor_pwm_value_req_handler.c  platform_set_motor_speed_req_handler.c
sources/App/src/modules/feedback/: CMakeLists.txt  interface.c
sources/App/src/modules/feedback/impl/: encoder.c  feedback.c
sources/App/src/modules/log/: CMakeLists.txt  interface.c
sources/App/src/modules/log/impl/: log.c
sources/App/src/modules/monitoring/: CMakeLists.txt  interface.c
sources/App/src/modules/monitoring/impl/: monitoring.c
sources/App/src/modules/scan/: CMakeLists.txt  interface.c
sources/App/src/modules/scan/impl/: scan.c
sources/App/src/modules/syscom/: CMakeLists.txt  interface.c
sources/App/src/modules/syscom/impl/: msg_processor.c  rx.c  tx.c
sources/App/src/msg/: CMakeLists.txt  messages_size_map.c
sources/App/src/msg/deserializers/: PlatformPollStatus.c  PlatformSetMotorPwmValue.c  PlatformSetMotorSpeed.c
sources/App/src/msg/ser_des/deserializers/: PlatformSetMotorSpeed.c
sources/App/src/msg/ser_des/serializers/: PlatformSetMotorSpeed.c
sources/App/src/msg/serializers/: PlatformPollStatus.c  PlatformSetMotorSpeed.c  PlatformStatus.c
sources/App/src/tasks/controller/: interface.c
sources/App/src/tasks/controller/impl/: controller.c  message_dispatch.c  motor_process.c  pid.c
sources/App/src/tasks/controller/impl/handlers/: platform_set_motor_speed_req_handler.c
sources/App/src/tasks/feedback/: interface.c
sources/App/src/tasks/feedback/impl/: encoder.c  feedback.c
sources/App/src/tasks/rx/: interface.c
sources/App/src/tasks/rx/impl/: msg_distributor.c  msg_processor.c  receiver.c  rx.c
sources/App/ut/: CMakeLists.txt  template_tests.c  test_runner.c  tests.h
sources/App/ut/platform/: pid_tests.c
sources/Core/: CMakeLists.txt
sources/Core/Inc/: FreeRTOSConfig.h  crc.h  gpio.h  i2c.h  main.h  spi.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h  tim.h  usart.h
sources/Core/Src/: crc.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32f3xx_hal_msp.c  stm32f3xx_hal_timebase_tim.c  stm32f3xx_it.c  syscalls.c  tim.c  usart.c
src/: .project  CMakeLists.txt  src.ioc
src/Inc/: main.h  stm32f0xx_it.h  tim.h  usart.h
src/Inc/main/: context.h  defs.h  init.h
src/Inc/msg/: consts.h  messages_size_map.h
src/Inc/msg/defs/: PlatformSetMotorSpeed.h
src/Src/: dma.c  freertos.c  gpio.c  main.c  stm32f0xx_hal_msp.c  stm32f0xx_hal_timebase_tim.c  stm32f0xx_it.c  tim.c
src/Src/log/: interface.c
src/Src/main/: context.c  init.c
src/Src/main/services/: interrupt_service.c
src/Src/msg/: messages_size_map.c
src/Src/tasks/controller/: interface.c
src/Src/tasks/feedback/: interface.c
test/sct/config/: stm32f072.repl
test/ut/: CMakeLists.txt  tests.h
test/ut/msg/: CMakeLists.txt  messages_size_map_tests.c
test/ut/platform/: CMakeLists.txt  pid_tests.c
tools/: cmds.txt
(+73 files in other folders)
